<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">AndroideityLinearLayout</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>

</resources>